# fairness-pipeline-toolkit

./: .gitignore  145.md  README.md  config.yml  pyproject.toml  run_pipeline.py
notebooks/: demo.ipynb
src/fairness_pipeline_toolkit/: __init__.py  cli.py  config.py  pipeline_executor.py
src/fairness_pipeline_toolkit/config/: __init__.py  config_parser.py  logging_config.py
src/fairness_pipeline_toolkit/measurement/: __init__.py  bias_detector.py  fairness_metrics.py
src/fairness_pipeline_toolkit/pipeline/: __init__.py  base_transformer.py  bias_mitigation_transformer.py
src/fairness_pipeline_toolkit/training/: __init__.py  fair_classifier.py  fairness_constrained_classifier.py
src/fairness_pipeline_toolkit/visualization/: __init__.py  plots.py
tests/: test_bias_detector.py  test_bias_mitigation_transformer.py  test_config_parser.py  test_fairness_constrained_classifier.py
