[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fairness-pipeline-toolkit"
version = "0.1.0"
description = "A comprehensive toolkit for implementing fairness-aware machine learning pipelines"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "fairlearn>=0.10.0",
    "mlflow>=2.0.0",
    "pyyaml>=6.0",
    "pydantic>=2.0.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "plotly>=5.0.0",
    "kaleido>=0.2.1", # Static image export
    "tomli>=1.2.0;python_version<'3.11'",
    "jupyter>=1.0.0",
    "notebook>=6.4.0",
    "pytest>=8.4.1",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "ruff>=0.1.0",
    "mypy>=0.910"
]
notebook = [
    "jupyter>=1.0.0",
    "notebook>=6.4.0",
    "ipykernel>=6.0"
]

[project.scripts]
run-fairness-pipeline = "fairness_pipeline_toolkit.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.fairness_pipeline_toolkit.visualization]
# Brand colors from brandbook
colors.primary = "#3A5CED"
colors.secondary = "#7E7AE6"
colors.accent = "#7BC0FF"
colors.success = "#82E5E8"
colors.warning = "#C2A9FF"
colors.danger = "#D30B3B"

# Typography specifications
fonts.family = "Gordita, Figtree, sans-serif"
fonts.title_size = 24
fonts.subtitle_size = 20
fonts.axis_size = 16

# Layout specifications  
layout.height = 600
layout.margins.l = 60
layout.margins.r = 150
layout.margins.t = 100
layout.margins.b = 80
layout.margins.pad = 10

# Static image export settings
export.default_format = "png"
export.width = 1200
export.height = 800
export.scale = 2
export.output_dir = "images"

